feat: Implement Google authentication; add Google auth route, service, and token verification. Also updated the yaml file as the new route was added
